# tiny_webview_all

./: README.md  README_progress.md
.github/workflows/: build.yml
appLauncher/: Cargo.toml  build.rs  package.json
appLauncher/.cargo/: config.toml
appLauncher/src/: main.rs
examples/webview_ipc/: package-lock.json  package.json
examples/webview_ipc/html/: index.html  index.js
examples/webview_ipc/src/: index.ts  ipc_server.ts  ipc_server_web.ts  ipc_server_web_file.ts  send_to_ipc.ts  webview_open.ts
examples/webview_ipc/src_builder/: build_es.ts  deploy.ts
examples/webview_php/: package.json
examples/webview_php/src/: index.php  koffi.php
examples/webview_ts/: package-lock.json  package.json
examples/webview_ts/html/: index.html  index.js
examples/webview_ts/src/: index.ts  index_backup.ts  tiny_webview.ts
examples/webview_ts_dev/: package-lock.json
examples/webview_ts_dev/html/: index.d.ts  index.html  index.js  uiapi.d.ts  uiapi.js
examples/webview_ts_dev/src/: index.ts
examples/webview_ts_dev/src_builder/: build_es.ts  deploy.ts
rust_webview_core/: Cargo.toml
rust_webview_core/src/: lib.rs  lib_file_selector.rs  lib_webview.rs  selector_arg.rs  testpointer.rs  webconfig.rs  webview_open.rs
rust_webview_node/: Cargo.toml
rust_webview_node/src/: lib.rs  main_old.rs  webconfig.rs  webfun.rs  webfun.txt  webview_open.rs
rust_webview_test/: package.json
rust_webview_test/src/: koffi.php
rust_webview_test_koffi/: package-lock.json  package.json  tsconfig.json  tsonfig.json
rust_webview_test_koffi/src/: index copy.ts  index.js  index.ts  index_simple_test.ts
tiny_webview/: README.md  package-lock.json  package.json
tiny_webview/src/srcNode/: filehandler.ts  lib_file_selector.ts  lib_loader.ts  lib_open_webview.ts  libloader.ts  main.ts
webview_ipc/: Cargo.toml  build.rs  index_cmd  package-lock.json  package.json  window.json
webview_ipc/.cargo/: config.toml
webview_ipc/src/: app_ctx.rs  exec_comand.rs  ipc_send.rs  ipc_server.rs  ipc_server.txt  ipc_server_handler.rs  main.rs  main_routefun.rs  open_web.rs  open_web_icon.rs  open_web_ipc.rs  start_event_loop.rs  start_event_loop_ui.rs  startup.rs  startup_web.rs  startup_web_icon.rs  utils_tools.rs
webview_ipc/src/web_startup/: mod.rs  response.rs  response_command.rs  response_tools.rs  response_uiapi.rs  response_uiapi_commmand.rs  startup.rs  web.rs
webview_ipc_node/: README.md  package-lock.json  package.json
webview_ipc_node/src/srcNode/: ipc_server.ts  ipc_server_web.ts  ipc_server_web_file.ts  main.ts  select_file.ts  tsconfig.json  webview_open.ts
(+6 files in other folders)
