[package]
name = "appLauncher"
version = "0.1.0"
edition = "2024"

[dependencies] 
# Kita gunakan tao untuk manajemen window 
tao = "0.35.0"

# Kita gunakan windows crate hanya untuk fungsi GDI+ dan menggambar
windows = { version = "0.58", features = [
    "Win32_Graphics_GdiPlus",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging"
] }
