[package]
name = "webview_ipc"
version = "0.1.0"
edition = "2024"

[dependencies]
rfd = "0.17.2"
serde_json = "1.0.149"
tao = "0.35.0"
wry = { git = "https://github.com/nnttoo/wry", branch = "feat/permission-handler" }
serde = { version = "1", features = ["derive"] }
interprocess = { version = "2.2", features = ["tokio"] }
tokio = { version = "1.38", features = ["full"] }
rmp-serde = "1.3.1" 
command-group = "5.0.1"